    + [CL] Drop double leading spaces in includes-maint-script-parameters
      paragraph that was causing indentation when rendered on lintian.d.o.
  * checks/fields.{pm,desc}:
    + [NT] Apply patch from Dylan Aïssi to tag non-canonical uses of
      the bioconductor homepage in the Homepage field.  (Closes: #839874)
  * data/spelling/corrections:
    + [JW, PW] Add more corrections.

 -- Chris Lamb <lamby@debian.org>  Thu, 06 Oct 2016 19:04:23 +0100

lintian (2.5.48) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - file-name-contains-wildcard-character
      - homepage-for-cran-package-not-canonical
      - init.d-script-needs-depends-on-lsb-base
      - maintscript-includes-maint-script-parameters
    + Removed:
      - hardening-no-stackprotector

  * checks/binaries.{desc,pm}:
    + [NT] Rewrite/embed the necessary bits from hardening-check to
      implement the default hardening-no-* checks directly in lintian.
      This is because hardening-check appears to be losing its
      "home" with the coming removal of hardening-wrapper and
      hardening-includes.  (Closes: #836756)
    + [JW] Remove the hardening-no-stackprotector tag.
    + [NT] Allow "golang-any" as an alternative to "golang-go" in
      Build-Depends for detecting golang binaries.  Thanks to
      Martín Ferrari for the report and the initial patch.
      (Closes: #839228)
  * checks/changelog-file.{desc,pm}:
    + [JW] Bump threshold for improbable bug number to 2000.
  * checks/control-file.{desc,pm}:
    + [JW] Add references to tags related to build profiles.
    + [JW] Relax Build-Profiles syntax check to allow (almost) any
      characters in profile names.  Thanks to Ximin Luo for the bug report.
      (Closes: #839086)
    + [JW] Add support for pkg.<srcpkg>.<anything> build profiles.
  * checks/debhelper.pm:
    + [JW] Ignore comments in debian/rules.
    + [JW] Fix parsing rule targets in lines containing multiple colons.